--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -6,11 +6,12 @@
   margin-top: -80px;
 }
 
-.tags-container {
-  margin-top: 5em;
-}
-
 /* This is a hack for now */
 .tag-container {
   padding-top: 0px;
+}
+
+.credits-container section h1 {
+  font-size: 1em;
+  margin-top: 1em;
 }
